[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "create"
harness = false

[[bench]]
name = "clone"
harness = false

[dependencies]
flexrc = { path = "../flexrc", features = ["str_deref"] }

[dev-dependencies]
criterion = { version = "0.3", features = ["real_blackbox"] }
