[package]
name = "flexrc"
version = "0.1.0"
authors = ["Scott Meeuwsen <smeeuwsen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A flexible/modular alternative to Rust Rc/Arc with unique hybrid capabilities"
repository = "https://github.com/nu11ptr/flexrc"
documentation = "https://docs.rs/flexrc"
readme = "../README.md"
edition = "2021"

[features]
default = ["std"]
std = []
small_counters = []
str_deref = []
track_threads = ["std"]

[dependencies]
static_assertions = "1"

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
